Upgrade to Gradle 8.3 and convert more scripts to Kotlin