@@ -3,75 +3,73 @@ plugins {
     id 'idea'
     id 'application'
     id 'jacoco'
-    id 'com.github.kt3k.coveralls' version '2.12.0'
+    id 'com.github.kt3k.coveralls' version '2.12.2'
 }
 
 compileJava.options.encoding = "UTF-8"
 version = '0.16.0-SNAPSHOT'
-mainClassName = 'achecrawler.Main'
-applicationDefaultJvmArgs = ["-Dname=ache -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError"]
 
-ext.versions = [
-    com_fasterxml_jackson: '2.14.2',
-    io_dropwizard_metrics: '4.2.17',
-]
+application {
+    mainClass = 'achecrawler.Main'
+    applicationDefaultJvmArgs = ["-Dname=ache -XX:+HeapDumpOnOutOfMemoryError"]
+}
 
 dependencies {
     // Sub-projects
     implementation project(':crawler-commons')
     // Logging
-    implementation libraries.slf4j_api
-    implementation libraries.logback
+    implementation libs.slf4j.api
+    implementation libs.logback.classic
     // Commons
-    implementation group: 'com.google.guava', name: 'guava', version: '23.0'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
-    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.22'
-    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
-    implementation group: 'commons-validator', name: 'commons-validator', version: '1.7'
-    implementation group: 'com.github.crawler-commons', name: 'crawler-commons', version: '1.2'
+    implementation(libs.guava)
+    implementation(libs.commons.lang3)
+    implementation(libs.commons.compress)
+    implementation(libs.commons.codec)
+    implementation(libs.commons.validator)
+    implementation(libs.crawler.commons)
     // CLI
-    implementation group: 'io.airlift', name: 'airline', version: '0.9'
+    implementation(libs.airline)
     // Data serialization
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.com_fasterxml_jackson
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: versions.com_fasterxml_jackson
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: versions.com_fasterxml_jackson
-    implementation group: 'com.esotericsoftware', name: 'kryo', version: '4.0.2'
-    implementation group: 'de.javakaffee', name: 'kryo-serializers', version: '0.43'
+    implementation libs.jackson.core.databind
+    implementation libs.jackson.dataformat.yaml
+    implementation libs.jackson.dataformat.cbor
+    implementation libs.kryo.lib
+    implementation libs.kryo.serializers
     // REST server dependencies
-    implementation group: 'io.javalin', name: 'javalin', version: '4.2.0'
+    implementation libs.javalin
     // Metrics and monitoring
-    implementation group: 'io.dropwizard.metrics', name: 'metrics-core', version: versions.io_dropwizard_metrics
-    implementation group: 'io.dropwizard.metrics', name: 'metrics-json', version: versions.io_dropwizard_metrics
-    implementation group: 'io.dropwizard.metrics', name: 'metrics-jvm', version: versions.io_dropwizard_metrics
+    implementation libs.dropwizard.metrics.core
+    implementation libs.dropwizard.metrics.json
+    implementation libs.dropwizard.metrics.jvm
     // Data management and repositories
-    implementation group: 'org.rocksdb', name: 'rocksdbjni', version: '6.25.3'
-    implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-client', version: '5.6.7'
-    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
-    implementation('org.netpreserve.commons:webarchive-commons:1.1.9') {
+    implementation(libs.rocksdbjni)
+    implementation(libs.elasticsearch.rest.client)
+    implementation(libs.kafka.clients)
+    implementation(libs.webarchive.commons) {
         exclude group: 'org.apache.hadoop', module: 'hadoop-core'
         exclude group: 'junit', module: 'junit'
     }
     // Data parsing and extraction
-    implementation group: 'com.syncthemall', name: 'boilerpipe', version: '1.2.2'
-    implementation group: 'net.sourceforge.nekohtml', name: 'nekohtml', version: '1.9.22'
-    implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.1'
-    implementation group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '8.11.1'
+    implementation(libs.boilerpipe)
+    implementation(libs.nekohtml)
+    implementation(libs.jsoup)
+    implementation(libs.lucene.analyzers.common)
     // HTTP libraries
-    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0'
-    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
+    implementation(libs.okhttp)
+    implementation(libs.httpclient)
     // Others
-    implementation group: 'com.github.haifengl', name: 'smile-core', version: '1.5.3'
-    implementation group: 'org.roaringbitmap', name: 'RoaringBitmap', version: '0.9.39'
+    implementation libs.smile.core
+    implementation libs.roaringbitmap
     // TODO: fill these in from Maven Central instead of that local libs dir
     implementation files('libs/langdetect-03-03-2014.jar') // TODO: upgrade to newer version from maven
     implementation files('libs/jsonic-1.2.0.jar') // required by by langdetect-03-03-2014.jar
 
     // Test framework dependencies
-    testImplementation libraries.junit_jupiter_api
-    testImplementation libraries.junit_jupiter_params
-    testRuntimeOnly libraries.junit_jupiter_engine
-    testImplementation libraries.mockito
-    testImplementation libraries.assertj_core
+    testImplementation libs.junit.api
+    testImplementation libs.junit.params
+    testRuntimeOnly libs.junit.engine
+    testImplementation libs.mockito.core
+    testImplementation libs.assertj.core
 }
 
 //
@@ -99,19 +97,24 @@ jar {
 //
 // Copies config folder into final distribution file
 //
-task copyConfig {
-    def f = file("$buildDir/config")
+tasks.register("copyConfig") {
+    // copies config directory to the project build directory
+    def f = file(project.layout.buildDirectory.dir('config').get())
     outputs.dir f
     doLast {
         copy {
             from rootProject.file("config/").absolutePath
-            into "$buildDir/config"
+            into project.layout.buildDirectory.dir('config').get()
             exclude "sample_model", "sample_training_data", "sample.seeds"
         }
     }
 }
-applicationDistribution.from(copyConfig) {
-    into "config"
+
+application {
+    // instructs the application plugin to include config directory into the final build
+    applicationDistribution.from(copyConfig) {
+        into "config"
+    }
 }
 
 
@@ -144,7 +147,7 @@ jacocoTestReport {
 tasks.register("depsize") {
     description = 'Prints dependencies for "default" configuration'
     doLast() {
-        listConfigurationDependencies(configurations.default)
+        listConfigurationDependencies(configurations.runtimeClasspath)
     }
 }
 
